# azqlite

./: .gitignore  Makefile  README.md  TEST_INFRASTRUCTURE_QUICK_REFERENCE.md  VFS_TEST_INFRASTRUCTURE.md  package-lock.json
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
benchmark/: Makefile  benchmark  benchmark.c  speedtest1_wrapper.c
benchmark/tpcc/: Makefile  README.md  timing.txt  tpcc-local  tpcc.c  tpcc_load.c  tpcc_schema.h  tpcc_txn.c
research/: adaptive-readahead-design.md  azure-blob-analysis.md  code-review.md  demand-paging-design-review.md  design-review.md  local-disk-cache-design.md  parallel-read-design.md  prior-art.md  sqlite-vfs-analysis.md  tcl-test-integration.md  testing-strategy.md
research/azure-poc/: Makefile  azure_auth.c  (+4 more)
rust/: .gitignore  Cargo.toml  DEVELOPMENT.md  QUICKSTART.md  README.md
rust/azqlite/: Cargo.toml
rust/azqlite-sys/: Cargo.toml  build.rs
rust/azqlite-sys/src/: lib.rs
rust/azqlite/examples/: basic.rs
rust/azqlite/src/: lib.rs
rust/docker-test/sample-project/: Cargo.toml
rust/docker-test/sample-project/src/: main.rs
src/: azqlite_cache.c  azqlite_cache.h  azqlite_shell.c  azqlite_vfs.c  azure_auth.c  azure_client.c  azure_client.h  azure_client_impl.h  azure_client_stub.c  azure_error.c  sqlite_objs_vfs.c
test/: SECURITY-TESTING.md  TEST-MATRIX.md  mock_azure_ops.c  mock_azure_ops.h  test_azure_client.c  test_coalesce.c  test_integration.c  test_main.c  test_vfs.c  test_wal.c
(+27 files in other folders)
