[package]
name = "azqlite-sys"
description = "Raw FFI bindings to azqlite C library"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

links = "azqlite"
build = "build.rs"

[dependencies]
libc.workspace = true

[build-dependencies]
cc = "1.0"
